force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/AgentName__c.field-meta.xml
<CustomField>
    <fullName>AgentName__c</fullName>
    <description
  >Agentforce agent display name associated with this event.</description>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>