force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/AgentSessionId__c.field-meta.xml
<CustomField>
    <fullName>AgentSessionId__c</fullName>
    <description
  >Agentforce session identifier for multi-event correlation.</description>
    <label>Agent Session Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>