force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/CompletionTokens__c.field-meta.xml
<CustomField>
    <fullName>CompletionTokens__c</fullName>
    <description
  >Completion token count for the captured LLM interaction.</description>
    <label>Completion Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>