force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/ConversationId__c.field-meta.xml
<CustomField>
    <fullName>ConversationId__c</fullName>
    <description
  >Conversation identifier associated with Agentforce interactions.</description>
    <label>Conversation Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>