force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/LlmModel__c.field-meta.xml
<CustomField>
    <fullName>LlmModel__c</fullName>
    <description
  >Model identifier used for the captured Agentforce interaction.</description>
    <label>LLM Model</label>
    <length>120</length>
    <type>Text</type>
</CustomField>