force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/PersistDebugDetail__c.field-meta.xml
<CustomField>
    <fullName>PersistDebugDetail__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True when full debug payload is intended to be persisted.</description>
    <label>Persist Debug Detail</label>
    <type>Checkbox</type>
</CustomField>