force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/ProcessingTimeMs__c.field-meta.xml
<CustomField>
    <fullName>ProcessingTimeMs__c</fullName>
    <description
  >Processing time in milliseconds for the captured operation.</description>
    <label>Processing Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>