force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/PromptContext__c.field-meta.xml
<CustomField>
    <fullName>PromptContext__c</fullName>
    <description
  >Rendered prompt context window for Agentforce debugging.</description>
    <label>Prompt Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>