force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/PromptTokens__c.field-meta.xml
<CustomField>
    <fullName>PromptTokens__c</fullName>
    <description
  >Prompt token count for the captured LLM interaction.</description>
    <label>Prompt Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>