force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/RawInput__c.field-meta.xml
<CustomField>
    <fullName>RawInput__c</fullName>
    <description
  >Raw input payload captured for the Agentforce interaction step.</description>
    <label>Raw Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>