force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/RawOutput__c.field-meta.xml
<CustomField>
    <fullName>RawOutput__c</fullName>
    <description
  >Raw output payload captured for the Agentforce interaction step.</description>
    <label>Raw Output</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>