force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/ReasoningStepName__c.field-meta.xml
<CustomField>
    <fullName>ReasoningStepName__c</fullName>
    <description
  >Reasoning step name for detailed timeline inspection.</description>
    <label>Reasoning Step Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>