force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/ReasoningStepType__c.field-meta.xml
<CustomField>
    <fullName>ReasoningStepType__c</fullName>
    <description
  >Reasoning step category (for example LLM, Action, Guardrail, Topic).</description>
    <label>Reasoning Step Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>