force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/ToolInvocations__c.field-meta.xml
<CustomField>
    <fullName>ToolInvocations__c</fullName>
    <description
  >Serialized tool invocation details captured for a reasoning step.</description>
    <label>Tool Invocations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>