force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/TopicName__c.field-meta.xml
<CustomField>
    <fullName>TopicName__c</fullName>
    <description
  >Classified topic label associated with this interaction step.</description>
    <label>Topic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>