force-app/ief-plugin-agentforce-core/main/default/objects/Integration_Log__c/fields/TotalTokens__c.field-meta.xml
<CustomField>
    <fullName>TotalTokens__c</fullName>
    <description
  >Total token count for this reasoning/event record.</description>
    <label>Total Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>